@@ -1,3 +1,10 @@
+2010-11-18 Riccardo Mottola
+
+	* Modules/TimeZone/MapView.m
+	* PreferencePanes/NSPreferencePane.m:
+
+	Changed return value to NSUInteger to match NSObject
+
 2010-10-20 Riccardo Mottola
 
 	* Modules/GNUmakefile
